--- a/src/components/page_components/Welcome/FirstSection/first-section.module.scss
+++ b/src/components/page_components/Welcome/FirstSection/first-section.module.scss
@@ -4,7 +4,7 @@
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
-  width: calc($screenWidth - 24px);
+  width: calc($screenWidth + 200px - 24px);
   padding-left: 24px;
   padding-right: 24px;
 }
@@ -53,7 +53,7 @@
 
   &:first-of-type {
     &::before {
-      content: 'Develop.';
+      content: 'Integrate.';
     }
   }
 
@@ -73,7 +73,7 @@
     display: block;
     width: 100%;
     text-align: center;
-    margin-bottom: -10px;
+    margin-bottom: -20px;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.8), #000);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
