--- a/src/components/page_components/Welcome/FourthSection/fourth-section.module.scss
+++ b/src/components/page_components/Welcome/FourthSection/fourth-section.module.scss
@@ -60,3 +60,188 @@
   color: transparent;
   display: inline;
 }
+
+.ship__headWrapper {
+  max-width: 600px;
+  margin: 12px auto 0;
+  display: flex;
+  flex-direction: column;
+  grid-gap: 12px;
+  gap: 12px;
+  text-align: center;
+}
+
+.ship__text__wrapper {
+  font-family: '__Inter_0ec1f4', '__Inter_Fallback_0ec1f4';
+  margin: 0;
+  color: #000;
+  font-size: 1.25rem;
+  letter-spacing: 0.020625rem;
+  font-weight: 400;
+  line-height: 1.5rem;
+  text-transform: inherit;
+  text-align: inherit;
+}
+
+.ship__small__heading {
+  font-size: 22px;
+  font-weight: 600;
+  letter-spacing: -0.05em;
+  margin: 0 0 8px;
+  & > span {
+    text-align: left;
+    display: inline-block;
+    vertical-align: top;
+    text-decoration: inherit;
+    max-width: 476.4px;
+  }
+}
+
+.preview__wrapper {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  width: calc($screenWidth - 24px);
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.preview__content {
+  max-width: 490px;
+  margin: 30px auto 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  grid-gap: 40px;
+  gap: 40px;
+  z-index: 1;
+}
+
+.text__wrapper {
+  margin: 0;
+  color: #666;
+  font-size: 1rem;
+  letter-spacing: inherit;
+  font-weight: 400;
+  line-height: 1.5rem;
+  text-transform: inherit;
+  text-align: inherit;
+}
+
+.develop__demo__benefits__item {
+  text-align: left;
+  max-width: 480px;
+  margin: 0;
+}
+
+.icon__wrapper {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  background: #fafafa;
+  border: 1px solid #e3e3e3;
+  color: #666;
+  margin: 0 auto 16px;
+}
+
+.small__heading {
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: -0.05em;
+  margin: 0 0 8px;
+  & > span {
+    display: inline-block;
+    vertical-align: top;
+    text-decoration: inherit;
+    max-width: 379.8px;
+  }
+}
+
+.paragraph {
+  line-height: 28px;
+  letter-spacing: -0.02em;
+  margin: 0;
+  font-size: 18px;
+  font-weight: 400;
+  color: #666;
+}
+
+.earth__wrapper {
+  overflow: hidden;
+  margin-top: -64px;
+  position: absolute;
+  left: 460px;
+  top: 260px;
+  aspect-ratio: 1/1;
+}
+
+.earth__container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  position: relative;
+  background-image: var(--background-url);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  height: 1000px;
+  width: 1000px;
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 50%;
+    width: 100%;
+    pointer-events: none;
+    background: linear-gradient(to bottom, transparent 0, #fff 60%);
+  }
+}
+
+.earth__globe {
+  left: 0;
+  top: 0;
+  position: absolute;
+  z-index: 0;
+  opacity: 1;
+  will-change: opacity;
+  transition: opacity 0.5s ease 0.5s;
+  width: 100%;
+  height: 100%;
+  contain: layout paint size;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 50%;
+    width: 100%;
+    pointer-events: none;
+    background: linear-gradient(to bottom, transparent 0, #fff 60%);
+  }
+}
+
+@media (min-width: 960px) {
+  .ship__headWrapper {
+    margin: 80px 0 0;
+    text-align: left;
+  }
+
+  .preview__content {
+    text-align: left;
+    align-items: flex-start;
+    margin: 30px 0 140px;
+  }
+
+  .icon__wrapper {
+    margin: 0 0 16px;
+  }
+}
