--- a/src/components/page_components/Welcome/FooterSection/footer-section.module.scss
+++ b/src/components/page_components/Welcome/FooterSection/footer-section.module.scss
@@ -23,6 +23,7 @@
 }
 
 .stack__container {
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
@@ -163,6 +164,77 @@
   align-items: center;
 }
 
+.stack__right__inner {
+  padding: 32px;
+  box-shadow: none;
+  border: 1px solid #eaeaea;
+  border-radius: 8px;
+  background: #fff;
+  width: 520px;
+}
+
+.stack__right__heading {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  min-width: 1px;
+  max-width: 100%;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.stack__right__provider {
+  background: #fafafa;
+  border: 1px solid #eaeaea;
+  border-radius: 5px;
+  padding: 48px;
+  height: 382px;
+}
+
+.reuse__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -8px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  & > .list__item {
+    -webkit-box-flex: 0;
+    -webkit-flex-grow: 0;
+    -moz-box-flex: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
+    -webkit-flex-basis: 50%;
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%;
+    min-width: 0;
+  }
+}
+
+.list__item {
+  flex-grow: 0;
+  min-width: 0;
+  padding: 8px;
+}
+
+.framework__card {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+  border-radius: 5px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
+  transition: all 0.2s ease;
+  cursor: pointer;
+}
+
+.framework__card__content {
+  display: flex;
+  padding: 12px;
+}
+
 @media screen and (min-width: 960px) {
   .stack__stack__container {
     flex-direction: row;
@@ -170,7 +242,7 @@
   }
 
   .stack__left {
-    margin-left: 0;
+    margin-left: 0px;
   }
 
   .stack__left__layout {
