--- a/src/components/page_components/Organizations/CreateOrgForm/create-org-form.module.scss
+++ b/src/components/page_components/Organizations/CreateOrgForm/create-org-form.module.scss
@@ -49,7 +49,6 @@
   width: 600px;
   height: fit-content;
   max-height: 80vh;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -75,6 +74,8 @@
 .form__body {
   width: 100%;
   height: 100%;
+  max-height: 100vh;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   gap: 20px;
